change bot Name in Config

--- a/qr.html
+++ b/qr.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Gambar Dinamis</title>
+    <title>Megumi MD</title>
     <style>
       #container {
         display: flex;
